--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/estate
-spring.datasource.username=postgres
-spring.datasource.password=chenxin9204
+#spring.datasource.url=jdbc:postgresql://localhost:5432/estate
+#spring.datasource.username=postgres
+#spring.datasource.password=chenxin9204
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=false
+
+spring.datasource.url=jdbc:postgresql://ec2-52-1-43-222.compute-1.amazonaws.com/estate
+spring.datasource.username=ubantu
+spring.datasource.password=chenxin
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=true
